# reterminal-e1001

./: .gitignore  AGENT4_CYCLES.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TASKS.md  refresh.sh
python/: .env.example  README.md  pyproject.toml  refresh.py  reterminal.py
python/examples/: _common.py  agent-feed.json  clock.py  dashboard.py  kitchen-display.json  preview_family.py  preview_missions.py  preview_viz.py
python/pages/: clock.py  dashboard.py  github.py  market.py  portfolio.py  status.py
python/reterminal/: __init__.py  __main__.py  client.py  config.py  diagnostics.py  encoding.py  exceptions.py  fonts.py  payloads.py  probe.py  protocols.py
python/reterminal/app/: __init__.py  live.py  publisher.py
python/reterminal/cli/: __init__.py  _typer_app.py  app.py  commands.py
python/reterminal/device/: __init__.py  adapter.py  capabilities.py
python/reterminal/family/: __init__.py  _grammar.py  activities.py  calendar.py  events.py  missions.py
python/reterminal/pages/: __init__.py  base.py  clock.py  dashboard.py  github.py  market.py  portfolio.py  status.py  weather.py
python/reterminal/providers/: __init__.py  (+14 more)
python/tests/: test_bitmap.py  test_brief.py  test_client.py  test_commands.py  test_config.py  test_device_adapter.py  test_diagnostics.py  test_encoding.py  test_file_provider.py  test_layout.py  test_lint.py  test_live.py  test_manifest.py  test_mono_renderer.py  test_paperclip_provider.py  test_photo_provider.py  test_probe.py  test_providers_e2e.py  test_publish_pipeline.py  test_renderer_snapshots.py  test_scheduler.py
(+46 files in other folders)
